--- a/package.json
+++ b/package.json
@@ -59,6 +59,6 @@
       },
       "scripts": {
           "dev": "vite",
-          "build": "vite build --output dist"
+          "build": "vite build"
       }
   }
