--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
   {
-      "name": "Online Slam Book Component",
+      "name": "Online Slam Book",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
